--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,8 @@
         zoneId: 'zjkgjtpzlt',
     });
 </script>
-
+curl -o anti-adblock.sh https://raw.githubusercontent.com/adcash/customer-scripts/master/linux/anti-adblock.sh
 </body>
 </html>
+
 
