--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>people Notepad</title>
@@ -1153,7 +1154,14 @@
     });
 </script>
 curl -o anti-adblock.sh https://raw.githubusercontent.com/adcash/customer-scripts/master/linux/anti-adblock.sh
+    <script id="aclib" type="text/javascript" src="//path/to/adcash/library"></script>
+<script type="text/javascript">
+    aclib.runPop({
+        zoneId: 'your_zone',
+    });
+</script>
 </body>
 </html>
+
 
 
