--- a/index.html
+++ b/index.html
@@ -472,7 +472,27 @@
                     <option value="'Impact', fantasy">Impact</option>
                     <option value="'Lucida Console', monospace">Lucida Console</option>
                     <option value="'Palatino Linotype', 'Book Antiqua', Palatino, serif">Palatino Linotype</option>
-                    <option value="Verdana, sans-serif">Verdana</option>
+                    <option value="Verdana, sans-serif">Verdana</option> 
+                      
+  <option value="Tahoma">Tahoma</option>
+  <option value="Trebuchet MS">Trebuchet MS</option>
+  <option value="Calibri">Calibri</option>
+  <option value="Segoe UI">Segoe UI</option>
+  <option value="Gill Sans">Gill Sans</option>
+  <option value="Century Gothic">Century Gothic</option>
+  <option value="Book Antiqua">Book Antiqua</option>
+  <option value="Candara">Candara</option>
+  <option value="Franklin Gothic Medium">Franklin Gothic Medium</option>
+  <option value="Garamond">Garamond</option>
+  <option value="Helvetica">Helvetica</option>
+  <option value="Optima">Optima</option>
+  <option value="Perpetua">Perpetua</option>
+  <option value="Rockwell">Rockwell</option>
+  <option value="Sans Serif">Sans Serif</option>
+  <option value="Monaco">Monaco</option>
+  <option value="Copperplate">Copperplate</option>
+  <option value="Brush Script MT">Brush Script MT</option>
+</select>
                 </select>
                 <select class="dropdown-select" id="fontSizeSelectToolbar">
                     <option value="8px">8</option>
@@ -1162,6 +1182,7 @@ curl -o anti-adblock.sh https://raw.githubusercontent.com/adcash/customer-script
 </script>
 </body>
 </html>
+
 
 
 
